--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,8 @@
+pool:
+  name: CENTOS-7
+
 trigger:
 - master
-
-pool:
-  vmImage: 'ubuntu-latest' 
 
 variables:
    imageName: 'pipelines-javascript-docker'
