--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,6 @@ steps:
 - task: Docker@2
   inputs:
     containerRegistry: 'Go'
+    repository: 'GoPortal'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
