--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,3 +14,13 @@ steps:
     repository: 'GoPortal'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(System.DefaultWorkingDirectory)/*'
+    Contents: 'deploy.yaml'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
