--- a/deploy.yaml
+++ b/deploy.yaml
@@ -56,7 +56,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/root/go"
+    path: /root/go
     type: DirectoryOrCreate
 ---
 kind: PersistentVolumeClaim
