--- a/deploy.yaml
+++ b/deploy.yaml
@@ -47,10 +47,11 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: go-pv-volume
+  namespace: default
   labels:
     type: local
 spec:
-  storageClassName: 'manual'
+  storageClassName: manual
   capacity:
     storage: 4Gi
   accessModes:
