--- a/deploy.yaml
+++ b/deploy.yaml
@@ -35,13 +35,18 @@ metadata:
   name: go-service
   namespace: #{KUBE_NAMESPACE}#
 spec:
+  selector:
+    app.kubernetes.io/name: go
  ports:
     - protocol: TCP
-      port: #{TARGET_PORT}# 
+      port: 4444 
       targetPort: 4444
- selector:
-     bb: go 
- type: NodePort
+ clusterIP: 10.3.20.211
+ type: LoadBalancer
+status:
+  loadBalancer:
+    ingress:
+    - ip: 10.3.20.208
 ---
 apiVersion: v1
 kind: PersistentVolume
