--- a/deploy.yaml
+++ b/deploy.yaml
@@ -41,12 +41,11 @@ spec:
     - protocol: TCP
       port: 4444 
       targetPort: 4444
-  clusterIP: 10.3.20.211
   type: LoadBalancer
+  externalIPs:
+   - 10.3.20.211
 status:
-  loadBalancer:
-    ingress:
-    - ip: 10.3.20.208
+  loadBalancer: {}
 ---
 apiVersion: v1
 kind: PersistentVolume
